--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>SIMON THE ANALYST PORTFOLIO<br />
+						<h1>SIMON THE BUSINESS ANALYST PORTFOLIO<br />
 						</h1>
 						<p>Experienced Business Analyst with Analytical and Strategic Solutions | Effective Communicator | SQL | Power BI | Tableau | Excel | SAS | <a href="https://www.linkedin.com/in/simon-crook/">@SIMONCROOK</a> 
 						<ul class="actions">
@@ -29,7 +29,7 @@
 
 				<!-- Nav -->
 					<header id="header">
-						<a href="index.html" class="logo">Simon The Analyst</a>
+						<a href="index.html" class="logo">SIMON CROOK</a>
 					</header>
 
 				<!-- Nav -->
@@ -51,13 +51,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/mrsimoncrook/World_Layoffs/blob/main/World_LayoffsSQLDataClean.sql">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis.</p>
+									<p>In this project we take raw world layoff data and transform it in SQL Server to make it more usable for analysis.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="https://github.com/mrsimoncrook/World_Layoffs/blob/main/World_LayoffsSQLDataClean.sql" class="image main"><img src="images/joshua-rawson-harris-OtFKligsDPc-unsplash.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">VIEW PROJECT</a></li>
+									<li><a href="https://github.com/mrsimoncrook/World_Layoffs/blob/main/World_LayoffsSQLDataClean.sql" class="button large">VIEW PROJECT</a></li>
 								</ul>
 							</article>
 
